--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+/* global */
+
 #app {
   height: 100%;
   width: 100%;
+}
+
+header {
+  display: block;
 }
 
 button {
@@ -10,40 +16,83 @@ button {
   cursor: pointer;
 }
 
+option {
+  font-weight: normal;
+  display: block;
+  white-space-collapse: collapse;
+  text-wrap: nowrap;
+  min-height: 1.2em;
+  padding: 0px 2px 1px;
+}
+
+select {
+  padding: 0;
+  margin: 0;
+}
+
+label {
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+section {
+  display: block;
+}
+
+main {
+  display: block;
+}
+
+body {
+  background-color: #1b1b1b;
+  margin: 0;
+  color: #a5a5a5;
+  display: block;
+  box-sizing: border-box;
+}
+
+img {
+  vertical-align: middle;
+  border: 0;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  font-weight: 400;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  display: block;
+}
+
+/* header */
 .body {
   width: 100%;
   z-index: 1;
   position: relative;
   min-height: 100%;
-}
-
-.skip {
-  position: relative;
-  z-index: 2147483647;
-}
-
-.skip button {
-  opacity: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-}
-
-.skip a {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  text-decoration: none;
-}
-
-header {
-  display: block;
 }
 
 .header {
@@ -61,7 +110,7 @@ header {
   height: 34px;
 }
 
-.wrap {
+.header-nav-wrap {
   width: 1240px;
   margin: 0 auto;
   position: relative;
@@ -148,6 +197,8 @@ header {
   transition: width 0.2s ease-out;
 }
 
+/* main */
+/* main-banner(swiper) */
 .main {
   width: 100%;
   z-index: 10;
@@ -322,6 +373,7 @@ header {
   width: 100%;
 }
 
+/* section: main-contents */
 .multi.portrait-cell {
   min-height: 383px;
 }
@@ -448,6 +500,7 @@ header {
   width: 100%;
 }
 
+/* footer */
 .footer {
   background-color: #1b1b1b;
   border-top: 1px solid #2f2f2f;
@@ -542,6 +595,11 @@ header {
   flex-direction: column;
 }
 
+.footer-info-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .footer-info-link-all {
   margin-top: 10px;
   font-size: 14px;
@@ -585,6 +643,11 @@ header {
   font-size: 0;
 }
 
+.footer-logo-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
 .footer-sns,
 .wavveon-footer-logo {
   display: inline-block;
@@ -626,79 +689,4 @@ header {
 .footer-sns img {
   display: block;
   max-width: 100%;
-}
-
-option {
-  font-weight: normal;
-  display: block;
-  white-space-collapse: collapse;
-  text-wrap: nowrap;
-  min-height: 1.2em;
-  padding: 0px 2px 1px;
-}
-
-select {
-  padding: 0;
-  margin: 0;
-}
-
-label {
-  margin: 0;
-  padding: 0;
-  vertical-align: middle;
-  cursor: pointer;
-}
-
-section {
-  display: block;
-}
-
-main {
-  display: block;
-}
-
-body {
-  background-color: #1b1b1b;
-  margin: 0;
-  color: #a5a5a5;
-  display: block;
-  box-sizing: border-box;
-}
-
-img {
-  vertical-align: middle;
-  border: 0;
-}
-
-h1 {
-  margin: 0;
-  padding: 0;
-}
-
-h2 {
-  margin: 0;
-  padding: 0;
-}
-a {
-  text-decoration: none;
-  font-weight: 400;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-li {
-  margin: 0;
-  padding: 0;
-}
-
-div {
-  display: block;
-}
-
-button {
-  margin: 0;
 }
