--- a/style.css
+++ b/style.css
@@ -367,7 +367,15 @@ div {
   width: 1240px;
   height: 508px;
 }
-
+.picture {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  opacity: 0;
+  transition: opacity 1s;
+}
 .picture-area img,
 .ppv-wrap {
   width: 100%;
@@ -498,6 +506,18 @@ div {
 .picture-area img,
 .ppv-wrap {
   width: 100%;
+}
+
+.btn-more.all {
+  position: absolute;
+  top: 7px;
+  right: 0;
+  padding: 5px 20px 5px 0;
+  font-size: 16px;
+  line-height: 24px;
+  color: #a5a5a5;
+
+  background-size: 16px auto;
 }
 
 /* footer */
