--- a/style.css
+++ b/style.css
@@ -249,6 +249,15 @@ div {
   background: url(asset/pause.svg) no-repeat 50% / cover;
 }
 
+.banner .btn-play {
+  background: url(asset/play.svg) no-repeat 50% / cover;
+}
+
+.ir {
+  font-size: 0;
+  text-indent: -99999px;
+}
+
 .banner .swiper-pagination {
   display: table-cell;
   position: static;
@@ -278,7 +287,7 @@ div {
   background: #e8e8e8;
 }
 
-.swiper-pagination-bullet {
+/* .swiper-pagination-bullet {
   width: 8px;
   height: 8px;
   display: inline-block;
@@ -286,6 +295,21 @@ div {
   background: #000;
   opacity: 0.2;
   cursor: pointer;
+} */
+
+.swiper-container .swiper-pagination .swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  border-radius: 100%;
+  background: #606060;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.swiper-container .swiper-pagination .swiper-pagination-bullet:hover {
+  background: #fff;
+  opacity: 1;
 }
 
 .banner .swiper-button-prev {
@@ -321,9 +345,26 @@ div {
   background-image: url(asset/prev.png);
 }
 
-.swiper-slide,
-.swiper-wrapper {
-  transform: translateZ(0);
+.swiper-slide {
+  transform: translateX(0);
+}
+.swiper-wrapper-banner {
+  transform: translateX(190px);
+}
+
+.swiper-slide > img {
+  width: 100%;
+}
+
+.swiper-wrapper-banner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  box-sizing: content-box;
+  transition: 0.3s ease-in-out;
 }
 
 .swiper-wrapper {
@@ -344,7 +385,6 @@ div {
   height: 508px;
   margin: 0 10px;
   border-radius: 12px;
-  background-color: #252525;
 }
 
 .component-list {
