--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ div {
   padding-bottom: 50px;
   height: 100%;
   min-height: 1080px;
-  overflow: hidden;
+  /* overflow: hidden; */
   min-width: 1240px;
   background-color: #1b1b1b;
 }
@@ -219,14 +219,6 @@ div {
   min-width: 1240px;
   max-width: 3840px;
   min-height: 555px;
-}
-
-.swiper-container {
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
 }
 
 .banner .main01-nav {
@@ -470,14 +462,6 @@ div {
   line-height: 36px;
 }
 
-.swiper-container {
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-
 .contents .swiper-slide {
   width: 100%;
 }
@@ -667,7 +651,6 @@ div {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  overflow: hidden;
   z-index: 1;
 }
 
