--- a/style.css
+++ b/style.css
@@ -306,16 +306,13 @@ div {
   opacity: 1;
 }
 
-.banner .swiper-button-prev,
-.second-button-prev {
+.banner .swiper-button-prev {
   right: 100px;
   background-image: url(asset/next.png);
 }
 
 .banner .swiper-button-next,
-.banner .swiper-button-prev,
-.second-button-next,
-.second-button-prev {
+.banner .swiper-button-prev {
   position: absolute;
   top: 186px;
   z-index: 20;
@@ -328,9 +325,7 @@ div {
 }
 
 .swiper-button-next,
-.swiper-button-prev,
-.second-button-next,
-.second-button-prev {
+.swiper-button-prev {
   position: absolute;
   top: 50%;
   z-index: 50;
@@ -339,10 +334,35 @@ div {
   background-repeat: no-repeat;
 }
 
-.banner .swiper-button-next,
-.second-button-next {
+.banner .swiper-button-next {
   left: 100px;
   background-image: url(asset/prev.png);
+}
+
+.second-button-next {
+  /* left: -5px; */
+  background-image: url(asset/prev.png);
+}
+
+.second-button-prev {
+  right: -10px;
+  background-image: url(asset/next.png);
+}
+
+.second-button-prev,
+.second-button-next {
+  position: absolute;
+  top: 40%;
+  z-index: 50;
+  cursor: pointer;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  z-index: 20;
+  width: 80px;
+  height: 80px;
+  background-color: transparent;
+  background-size: 100px auto;
+  font-size: 0;
 }
 
 .swiper-slide {
@@ -571,12 +591,14 @@ div {
 
 .thumb-image img {
   width: 100%;
-  height: auto스;
+  height: auto;
 }
 
 .thumb:hover .thumb-image {
   transform: scale(1.05);
 }
+
+/* main section swiper button */
 
 /* footer */
 .footer {
