sql 연결 with flask

--- a/server/templates/html/index.html
+++ b/server/templates/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gazero Wavve</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../../static/css/style.css" />
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             <div class="header-link">
               <h1 class="logo">
                 <a href="/">
-                  <img src="asset/navLogo.svg" alt="logo" />
+                  <img src="../../static/images/navLogo.svg" alt="logo" />
                 </a>
               </h1>
               <nav id="menu" class="link-left">
@@ -102,22 +102,22 @@
               <!-- swiper -->
               <div class="swiper-wrapper-banner">
                 <div class="swiper-slide">
-                  <img src="asset/transfer0.webp" alt="/" />
+                  <img src="../../static/images/transfer0.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transfer1.webp" alt="/" />
+                  <img src="../../static/images/transfer1.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transfer2.webp" alt="/" />
+                  <img src="../../static/images/transfer2.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transfer3.webp" alt="/" />
+                  <img src="../../static/images/transfer3.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transfer4.webp" alt="/" />
+                  <img src="../../static/images/transfer4.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transfer5.webp" alt="/" />
+                  <img src="../../static/images/transfer5.webp" alt="/" />
                 </div>
               </div>
               <!--  -->
@@ -155,7 +155,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content01.webp"
+                                    src="../../static/images/content01.webp"
                                     alt="곽준빈기사식당"
                                   />
                                 </picture>
@@ -178,7 +178,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/contents02.webp"
+                                    src="../../static/images/contents02.webp"
                                     alt="남의연애"
                                   />
                                 </picture>
@@ -201,7 +201,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content03.webp"
+                                    src="../../static/images/content03.webp"
                                     alt="데드드리프트"
                                   />
                                 </picture>
@@ -223,7 +223,10 @@
                               </div>
                               <div class="picture-area">
                                 <picture>
-                                  <img src="/asset/content04.webp" alt="/" />
+                                  <img
+                                    src="/../../static/images/content04.webp"
+                                    alt="/"
+                                  />
                                 </picture>
                               </div>
                             </div>
@@ -244,7 +247,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content05.webp"
+                                    src="../../static/images/content05.webp"
                                     alt="하트시그널"
                                   />
                                 </picture>
@@ -275,7 +278,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content06.webp"
+                                    src="../../static/images/content06.webp"
                                     alt="곽준빈기사식당"
                                   />
                                 </picture>
@@ -298,7 +301,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content07.webp"
+                                    src="../../static/images/content07.webp"
                                     alt="남의연애"
                                   />
                                 </picture>
@@ -321,7 +324,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content08.webp"
+                                    src="../../static/images/content08.webp"
                                     alt="데드드리프트"
                                   />
                                 </picture>
@@ -343,7 +346,10 @@
                               </div>
                               <div class="picture-area">
                                 <picture>
-                                  <img src="/asset/content09.webp" alt="/" />
+                                  <img
+                                    src="/../../static/images/content09.webp"
+                                    alt="/"
+                                  />
                                 </picture>
                               </div>
                             </div>
@@ -364,7 +370,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content10.webp"
+                                    src="../../static/images/content10.webp"
                                     alt="하트시그널"
                                   />
                                 </picture>
@@ -423,7 +429,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content06.webp"
+                                    src="../../static/images/content06.webp"
                                     alt="곽준빈기사식당"
                                   />
                                 </picture>
@@ -446,7 +452,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content07.webp"
+                                    src="../../static/images/content07.webp"
                                     alt="남의연애"
                                   />
                                 </picture>
@@ -469,7 +475,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content08.webp"
+                                    src="../../static/images/content08.webp"
                                     alt="데드드리프트"
                                   />
                                 </picture>
@@ -491,7 +497,10 @@
                               </div>
                               <div class="picture-area">
                                 <picture>
-                                  <img src="/asset/content09.webp" alt="/" />
+                                  <img
+                                    src="/../../static/images/content09.webp"
+                                    alt="/"
+                                  />
                                 </picture>
                               </div>
                             </div>
@@ -512,7 +521,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content10.webp"
+                                    src="../../static/images/content10.webp"
                                     alt="하트시그널"
                                   />
                                 </picture>
@@ -545,14 +554,14 @@
               id="swiper-button-next-footer"
               class="footer-arrow-left swiper-button-next"
             >
-              <img src="asset/footerPrev.png" alt="/" />
+              <img src="../../static/images/footerPrev.png" alt="/" />
             </button>
             <button
               type="button"
               id="swiper-button-prev-footer"
               class="footer-arrow-right swiper-button-prev"
             >
-              <img src="asset/footerNext.png" alt="/" />
+              <img src="../../static/images/footerNext.png" alt="/" />
             </button>
             <div
               id="footer-notice"
@@ -603,7 +612,7 @@
           <div class="footer-link">
             <div class="link-footer-logo">
               <label for="wavveon-logo">
-                <img src="asset/footer-logo.svg" alt="/" />
+                <img src="../../static/images/footer-logo.svg" alt="/" />
               </label>
 
               <select
@@ -627,10 +636,13 @@
               </select>
               <div class="footer-sns">
                 <a href="/" target="_blank" rel="noopener noreferrer">
-                  <img src="asset/facebook.png" alt="페이스북" />
+                  <img src="../../static/images/facebook.png" alt="페이스북" />
                 </a>
                 <a href="/" target="_blank" rel="noopener noreferrer">
-                  <img src="asset/naverPost.png" alt="네이버포스트" />
+                  <img
+                    src="../../static/images/naverPost.png"
+                    alt="네이버포스트"
+                  />
                 </a>
               </div>
             </div>
@@ -639,6 +651,6 @@
       </footer>
     </div>
   </div>
-  <script src="js/slider_init.js"></script>
-  <script src="js/slider-second.js"></script>
+  <script src="../../static/js/slider_init.js"></script>
+  <script src="../../static/js/slider-second.js"></script>
 </body>
