--- a/server/templates/html/index.html
+++ b/server/templates/html/index.html
@@ -102,22 +102,22 @@
               <!-- swiper -->
               <div class="swiper-wrapper-banner">
                 <div class="swiper-slide">
-                  <img src="../../static/images/transfer0.webp" alt="/" />
+                  <img src="../../static/images/banner0.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/transfer1.webp" alt="/" />
+                  <img src="../../static/images/banner1.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/transfer2.webp" alt="/" />
+                  <img src="../../static/images/banner2.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/transfer3.webp" alt="/" />
+                  <img src="../../static/images/banner3.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/transfer4.webp" alt="/" />
+                  <img src="../../static/images/banner4.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/transfer5.webp" alt="/" />
+                  <img src="../../static/images/banner5.webp" alt="/" />
                 </div>
               </div>
               <!--  -->
