--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -238,11 +238,11 @@ div {
 }
 
 .banner .btn-pause {
-  background: url(asset/pause.svg) no-repeat 50% / cover;
+  background: url(../images/pause.svg) no-repeat 50% / cover;
 }
 
 .banner .btn-play {
-  background: url(asset/play.svg) no-repeat 50% / cover;
+  background: url(../images/play.svg) no-repeat 50% / cover;
 }
 
 .ir {
@@ -308,7 +308,7 @@ div {
 
 .banner .swiper-button-prev {
   right: 100px;
-  background-image: url(asset/next.png);
+  background-image: url(../images/next.png);
 }
 
 .banner .swiper-button-next,
@@ -336,17 +336,17 @@ div {
 
 .banner .swiper-button-next {
   left: 100px;
-  background-image: url(asset/prev.png);
+  background-image: url(../images/prev.png);
 }
 
 .second-button-next {
   /* left: -5px; */
-  background-image: url(asset/prev.png);
+  background-image: url(../images/prev.png);
 }
 
 .second-button-prev {
   right: -10px;
-  background-image: url(asset/next.png);
+  background-image: url(../images/next.png);
 }
 
 .second-button-prev,
@@ -773,7 +773,7 @@ div {
   line-height: 32px;
   color: #a5a5a5;
   border: 1px solid #252525;
-  background: url(asset/footerSelect.png) #252525 96% 50% no-repeat;
+  background: url(../images/footerSelect.png) #252525 96% 50% no-repeat;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
