배너 데이터 연결 완료

--- a/server/templates/html/index.html
+++ b/server/templates/html/index.html
@@ -101,24 +101,58 @@
 
               <!-- swiper -->
               <div class="swiper-wrapper-banner">
+                {% for banner in banner_data %}
                 <div class="swiper-slide">
-                  <img src="../../static/images/banner0.webp" alt="/" />
+                  <img
+                    id="img{{ loop.index }}"
+                    src="../../static/images/banner{{ loop.index0 }}.webp"
+                    alt="{{ banner.bannerAlt }}"
+                  />
+                </div>
+
+                <!-- <div class="swiper-slide">
+                  <img
+                    id="{{ loop.index0 }}"
+                    src="../../static/images/banner0.webp"
+                    alt="{{ banner.bannerAlt }}"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/banner1.webp" alt="/" />
+                  <img
+                    id="{{ loop.index0 }}"
+                    src="../../static/images/banner1.webp"
+                    alt="{{ banner.bannerAlt }}"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/banner2.webp" alt="/" />
+                  <img
+                    id="{{ loop.index0 }}"
+                    src="../../static/images/banner2.webp"
+                    alt="{{ banner.bannerAlt }}"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/banner3.webp" alt="/" />
+                  <img
+                    id="{{ loop.index0 }}"
+                    src="../../static/images/banner3.webp"
+                    alt="{{ banner.bannerAlt }}"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/banner4.webp" alt="/" />
+                  <img
+                    id="{{ loop.index0 }}"
+                    src="../../static/images/banner4.webp"
+                    alt="{{ banner.bannerAlt }}"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="../../static/images/banner5.webp" alt="/" />
-                </div>
+                  <img
+                    id="{{ loop.index0 }}"
+                    src="../../static/images/banner5.webp"
+                    alt="{{ banner.bannerAlt }}"
+                  />
+                </div> -->
+                {% endfor %}
               </div>
               <!--  -->
             </div>
